Update composer.json dependencies
Added 'anna-engineering/event' and 'anna-engineering/async' to the 'require' section. Set 'minimum-stability' to 'dev' to allow development versions of dependencies.

--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
     }
   },
   "require": {
+    "anna-engineering/event": "*",
+    "anna-engineering/async": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
     "brianium/paratest": "*"
-  }
+  },
+  "minimum-stability": "dev"
 }
