Add ext-curl to composer dependencies
The ext-curl extension was added to the 'require' section in composer.json to ensure it is available as a dependency for the project.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   },
   "require": {
     "anna-engineering/event": "*",
-    "anna-engineering/async": "*"
+    "anna-engineering/async": "*",
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
